--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="box">
         <div class="sbox">
             <img src="image-qr-code.png" alt="">
-            <div class="txt"><p class="p1"><b>Improve your front-end skills by building projects</b></p>
+            <div class="txt"><p class="p1"><b>Improve your front-end skills by building projects</b></p><br>
             <div class="p2">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</div>
             </div>
         </div>
