--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             width: 240px;
             height: 40px;
             left: 23px;
-            top: 360px;
+            bottom: 50px;
             font-family: sans-serif;
             font-style: normal;
             /* font-weight: 700; */
